styling sidebar and fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10,31 +10,59 @@
   position: relative;
 }
 
- #main-navbar ul {
+#main-navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   position: relative;
   left: 50%;
   float: left;
- }
+}
  
- #main-navbar ul li {
+#main-navbar ul li {
   float: left;
   position: relative;
   right: 50%;
   display: block;
- } 
+} 
 
- #main-navbar ul li a {
+#main-navbar ul li a {
   display: block;
   padding: 10px 20px;
   color: #fff;
   text-decoration: none;
- }
+}
  
- #main-navbar ul li a:hover {
+#main-navbar ul li a:hover {
   background-color: #000;
+}
+ 
+#onpage {
   text-decoration: underline overline;
- }
+}
 
+/*Sidebar*/
+#sidebar {
+  position: fixed;
+  right:0%;
+  background-color: red;
+  height: 100%;
+  width: 20%;
+}
+
+#side-bar ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+}
+
+#sidebar ul li a {
+  display: block;
+  padding: 15px 0;
+  color: #fff;
+  text-decoration: none;
+}
+
+#sidebar ul li a:hover {
+  background-color: #000;
+}
